[metadata]
name = pycolossusdb
version = 0.0.1
author = huyifan03
author_email = huyifan03@kuaishou.com
description = colossusdb python admin client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kuaishou/colossusdb/partition_keeper/python
project_urls =
   Bug Tracker = https://github.com/kuaishou/colossusdb/partition_keeper/python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
